jss-compiler/tests/parser/invalid/invalid_increment_target.jss
function void main() {
    ++10;
}
